Improve accessibility and add dark mode for comment issue bars.
The comment issue bar has been rewritten entirely to be accessible, to
support dark mode, and to be more performant.

The CSS side is now using our CSS Component standards, and makes use of
CSS variables and CSS grid to do the layout. Through this, we now have
dark mode support, CSS-managed status icons, and an improved mobile UI.

The JavaScript side has been rewritten in TypeScript and Ink. It no
longer uses the old behavior of defining every button up-front and
toggling visibility, and instead manages the list of buttons relevant to
the current issue and user states. This, combined with ARIA information,
gives us a more accessible and clean bar.

It also makes use of the new per-comment issue events, which means that
toggling an issue no longer results in every single issue bar on the
page running checks. It's faster and less error-prone than what we had
before.

In dark mode, we now go for a layered grey background, and use the icon,
text, and button colors to help sell the appearance of the bar. The text
and buttons are now yellow-themed, like the bar is in light mode.

The buttons also now show an animation when in the middle of setting a
new issue status. This leverages `Ink.Button`'s busy state.

Testing Done:
All unit tests pass.

Tested all the issue status combinations, making sure that loading and
changing statuses worked as expected.

Tested dark and light modes, desktop and mobile.

Checked the accessibility tree for any apparant issues.

Reviewed at https://reviews.reviewboard.org/r/13715/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -777,6 +777,10 @@
 
   .review-comment {
     padding: @review-comment-padding;
+
+    .rb-c-issue-bar {
+      margin-bottom: 2em;
+    }
   }
 
   &.comment-details-empty .review-comment {
@@ -2252,119 +2256,6 @@
   .ui-icon-gripsmall-diagonal-se {
     background: url('@{rb-images-root}/resize-grip.png') no-repeat top left;
   }
-}
-
-.issue-state {
-  @issue-state-height: 26px;
-
-  border: 1px transparent solid;
-  font-weight: bold;
-  line-height: @issue-state-height;
-  margin-bottom: 2em;
-  min-height: @issue-state-height;
-  padding: 0.6em;
-  transition: 0.1s linear all;
-  visibility: hidden;
-
-  input, .back-to-issue-summary {
-    /*
-     * This keeps a consistency with the browser. By default, Chrome uses
-     * a margin of 2px, and changing it to 0 actually makes things look
-     * off-center.
-     */
-    margin: 2px 2px 2px 0.2em;
-    vertical-align: middle;
-  }
-
-  .issue-container {
-    position: relative;
-  }
-
-  .rb-icon {
-    margin: 0 0.2em;
-  }
-
-  &.dropped, &.open, &.resolved, &.verifying-resolved, &.verifying-dropped {
-    visibility: visible;
-  }
-
-  &.dropped {
-    background: @issue-discarded-bg;
-    border-color: @issue-discarded-border-color;
-
-    .back-to-issue-summary, .back-to-issue-summary:visited {
-      color: @issue-discarded-link-color;
-    }
-  }
-
-  &.open {
-    background: @issue-opened-bg;
-    border-color: @issue-opened-border-color;
-
-    .back-to-issue-summary, .back-to-issue-summary:visited {
-      color: @issue-opened-link-color;
-    }
-  }
-
-  &.resolved {
-    background: @issue-resolved-bg;
-    border-color: @issue-resolved-border-color;
-
-    .back-to-issue-summary, .back-to-issue-summary:visited {
-      color: @issue-resolved-link-color;
-    }
-  }
-
-  &.verifying-resolved,
-  &.verifying-dropped {
-    background: @issue-verifying-bg;
-    border-color: @issue-opened-border-color;
-
-    .back-to-issue-summary, .back-to-issue-summary:visited {
-      color: @issue-opened-link-color;
-    }
-  }
-
-  .back-to-issue-summary {
-    font-size: 13px;
-    font-weight: normal;
-    text-decoration: none;
-    padding: 0 0.5em;
-    position: absolute;
-    right: 0;
-    height: 24px;
-    line-height: 24px;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  .issue-message {
-    margin-right: 0.5em;
-    vertical-align: middle;
-  }
-
-  .on-mobile-medium-screen-720({
-    .back-to-issue-summary {
-      display: none;
-    }
-
-    .issue-actions {
-      display: block;
-      margin-top: 0.5em;
-
-      input:first-child {
-        margin-left: 0;
-      }
-    }
-
-    .issue-details {
-      display: inline-block;
-      overflow: hidden;
-      vertical-align: top;
-    }
-  });
 }
 
 
