--- a/reviewboard/static/rb/css/ui/colors.less
+++ b/reviewboard/static/rb/css/ui/colors.less
@@ -135,6 +135,10 @@
         draft-border-color:
           var(--if-light, var(--ink-p-green-500))
           var(--if-dark, var(--ink-p-green-100));
+
+        issue-bg: var(--ink-p-light__yellow-300);
+
+        issue-border-color: var(--ink-p-container-outline);
       };
     );
   }
